--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "astro": "^5.16.3",
     "astro-icon": "^1.1.5",
     "qr-code-styling": "^1.9.2",
-    "resend": "^4.8.0"
+    "resend": "^4.8.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@iconify-json/akar-icons": "^1.2.7",
