--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
-  "exclude": ["dist"],
+  "exclude": [
+    "dist"
+  ],
   "extends": "astro/tsconfigs/strict",
-  "include": ["**/*", ".astro/types.d.ts"],
+  "include": [
+    "**/*",
+    ".astro/types.d.ts"
+  ],
 }
