--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "dependencies": {
-    "@astrojs/vercel": "^9.0.3",
+    "@astrojs/vercel": "^9.0.4",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
-    "astro": "^5.16.6",
+    "astro": "^5.16.16",
     "astro-icon": "^1.1.5",
     "qr-code-styling": "^1.9.2",
-    "resend": "^6.6.0"
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@iconify-json/akar-icons": "^1.2.7",
-    "@iconify-json/devicon": "^1.2.53",
-    "@iconify-json/ep": "^1.2.3",
+    "@iconify-json/devicon": "^1.2.57",
+    "@iconify-json/ep": "^1.2.4",
     "@iconify-json/fe": "^1.2.4",
     "@iconify-json/flowbite": "^1.2.7",
     "@iconify-json/fluent-emoji-flat": "^1.2.5",
     "@iconify-json/ic": "^1.2.4",
     "@iconify-json/icon-park-outline": "^1.2.4",
-    "@iconify-json/line-md": "^1.2.11",
+    "@iconify-json/line-md": "^1.2.14",
     "@iconify-json/lineicons": "^1.2.6",
-    "@iconify-json/material-icon-theme": "^1.2.44",
-    "@iconify-json/material-symbols": "^1.2.50",
+    "@iconify-json/material-icon-theme": "^1.2.49",
+    "@iconify-json/material-symbols": "^1.2.53",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/pixel": "^1.2.1",
     "@iconify-json/typcn": "^1.2.2",
     "@tailwindcss/vite": "^4.1.18",
-    "clogs.ts": "^1.0.35",
+    "clogs.ts": "^1.0.39",
     "clsx": "^2.1.1",
+    "prettier": "^3.8.1",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
